src/static/room.css
/* ... */
.input-bar .input-nick-sizer, .input-bar .input-nick,
.input-bar .input-message, .input-bar .input-message-sizer {
  display: block;
  margin: 0;
  border: 0;
  padding: 0;
  font: inherit;
}
.input-bar .input-info-cell {
  display: inline-block;
  position: absolute;
  left: 0;
  width: 3.5em;
}
.input-bar .alert-container {
  display: table;
  margin: auto;
  padding: 1px 0;
  min-height: 1.2em;
  line-height: 0;
}
.input-bar .alert-container a {
  display: table-cell;
  width: 1.2em;
  height: 1.2em;
}
.input-bar .alert-container img {
  display: block;
  width: 100%;
  height: 100%;
}
.input-bar .input-nick-cell {
  position: relative;
}
.input-bar .input-nick-sizer {
  display: inline-block;
  padding: 1px 2px;
  white-space: pre;
  min-height: 1.2em;
  vertical-align: bottom;
  color: transparent;
  background: #c0c0c0;
}
/* Need to be more specific than catch-all below */
.input-bar .input-nick-sizer, #main .input-bar .input-nick-sizer {
  -webkit-transition: background 0.1s linear;
  transition: background 0.1s linear;
}
.input-bar .input-nick {
  position: absolute;
  top: 1px;
  left: 2px;
  min-width: 100%;
  color: inherit;
  background: transparent;
}
.input-bar .input-message-cell {
  position: relative;
  -webkit-flex-grow: 1;
  flex-grow: 1;
  padding: 1px 0 1px 0.25em;
}
.input-bar .input-nick-prompt {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  max-width: 100%;
  height: 100%;
  border: 1px solid #808080;
  padding-right: 0.25em;
  background: white;
  box-sizing: border-box;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
  z-index: 10;
}
.input-bar .input-nick-prompt img {
  width: 1.2em;
  height: 1.2em;
  vertical-align: bottom;
}
.input-bar .input-group {
  position: relative;
}
.input-bar .input-message, .input-bar .input-message-sizer {
  width: 100%;
  color: inherit;
  background: transparent;
  overflow: hidden;
  resize: none;
}
.input-bar .input-message-sizer {
  position: absolute;
  top: 0;
  visibility: hidden;
}

.input-bar input, .input-bar textarea {
  outline: none;
}

.offscreen-alert {
  visibility: hidden;
  opacity: 0.5;
}
.offscreen-alert.visible {
  visibility: visible;
}
.offscreen-alert.ping {
  opacity: 1;
}

.message > .replies > .input-bar:first-child {
  margin-top: 3px;
}
.message > .replies > .input-bar:last-child {
  margin-bottom: 3px;
}

.message-box {
  position: relative;
  padding-left: 3.5em;
  overflow: auto;
}
.message-box.notimes {
  padding-left: 0;
}
.message-box.notimes .message > .line time {
  display: none;
}
.message-box.notimes .input-bar .input-info-cell {
  display: none;
}

.message-pane {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow-y: scroll;
  overflow-x: auto;
}
.message-pane > .message-box {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -webkit-justify-content: flex-end;
  flex-direction: column;
  justify-content: flex-end;
  min-height: 100%;
  box-sizing: border-box;
  padding: 5px 5px 5px 3.5em;
}
.message-pane > .message-box.notimes {
  padding-left: 5px;
}

.message-pane > .message-box > .message:last-child {
  margin-bottom: 2px;
}

.popups-wrapper, .windows-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
}
.windows-wrapper {
  pointer-events: none;
}
.windows-wrapper > * {
  pointer-events: auto;
}

.popups-wrapper .close-all {
  position: absolute;
  top: 0;
  right: 0;
  width: 2em;
  height: 2em;
  border: 1px solid black;
  background: white;
  outline-offset: -2px;
  z-index: 1100;
}
.popups-wrapper .close-all:hover {
  background: #c0c0c0;
}
.popups-wrapper .close-all:active {
  background: #808080;
}

.popups-content {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
}
.popups {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  min-height: 100%;
  padding: 0.5em;
  box-sizing: border-box;
  background: rgba(255, 255, 255, 0.5);
  z-index: 1000;
}
.popups > .popup {
  margin: 0.5em auto;
  max-width: 100%;
}
.popups > .popup:first-child {
  margin-top: auto;
}
.popups > .popup:last-child {
  margin-bottom: auto;
}
.windows {
  z-index: 900;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -webkit-flex-wrap: wrap;
  flex-direction: column;
  flex-wrap: wrap;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 50%;
  padding: 1em;
  box-sizing: border-box;
  overflow: hidden;
}

.popup {
  position: relative;
  margin: auto;
  border: 2px solid black;
  background: white;
  word-wrap: break-word;
}
.popup .popup-header {
  display: -webkit-flex;
  display: flex;
  background: white;
  border-bottom: 1px solid black;
}
.popup .popup-title {
  font-weight: bold;
  margin-right: auto;
  padding: 5px;
  line-height: 1.2em;
}
.popup .popup-title-sep {
  width: 1px;
  -webkit-flex-shrink: 0;
  flex-shrink: 0;
  background: black;
}
.popup .popup-button {
  margin: auto 0;
  border: 0;
  padding: 0;
  line-height: 0;
  outline-offset: -1px;
}
.popup .popup-button img {
  width: 1.2em;
  height: 1.2em;
  margin: 5px;
}
.popup .popup-content {
  padding: 5px;
}
.popup .popup-content:empty {
  padding-top: 0;
}
.popup .popup-content hr {
  margin: 5px 0;
  border: 0;
  padding: 0;
  height: 1px;
  background: black;
}
.popup .popup-bottom {
  padding: 0 5px 5px 5px;
  text-align: right;
}
.popup .popup-bottom:empty {
  padding-bottom: 0;
}

.popup.popup-hidetitle .popup-header {
  position: absolute;
  right: 0;
  margin-left: -1px;
  max-width: 100%;
  visibility: hidden;
}
.popup.popup-hidetitle:hover .popup-header {
  visibility: visible;
}
.popup.popup-hidetitle .popup-title {
  border-left: 1px solid black;
}
.popup.popup-hidetitle .popup-title:empty {
  border: none;
  padding: 0;
}
/* ... */

